tests/golden/expected/example6.stdout.txt
Compile error: /Users/rileypb/dev/lamp/tests/fixtures/example6.lamp:7: type error: field "version" expects int, got string
  7 | 	game.all.first.version = "illegal"
    |  ^
